# dnsmasq-viewer

./: LICENSE  README.md
backend/: .coveragerc  .gitignore  .pylintrc  LICENSE  Pipfile  README.rst  pyproject.toml  setup.py  tox.ini
backend/backend/: exceptions.py  lease_parser.py  main.py  structures.py  validators.py
backend/backend/api/: api.py
backend/static/: leasefile
backend/tests/: test_lease_parser.py  test_validators.py
